# oakd_ros

./: README.md  package.xml  setup.py
config/: balls_map.yaml  base2cam.yaml  cam_driver.yaml  camera_info.yaml  capture.yaml  common.yaml  goalpose_config.yaml  oakd_pro_w.yaml  rviz_markers.yaml  spatial_location.yaml
launch/: balls_location.launch.py  debug.launch.py  driver.launch.py  goalpose.launch.py  oakd.launch.py  republish.launch.py  spatial.launch.py  transforms.launch.py
oakd/: ballsBase.py  ballsMap.py  base_polygon.py  broadcast_debug.py  cam2base.py  cam_driver.py  camera_info.py  capture_dbg.py  goal_marker.py  goal_pose.py  rviz_markers.py  spatial.py  target_marker.py
scripts/camera_control/: controls.md  rgb_camera.py
tfs/: base2cam_optical.py  cam_optical2cam_ros.py
transforms/: base2cam.py  base2cam_optical.py  cam_optical2cam_ros.py  map2base_link.py  pose_pub.py
