<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>oakd</name>
  <version>0.0.0</version>
  <description>Configure OAKD - YOLO - ROS</description>
  <maintainer email="078bct017.apil@pcampus.edu.np">apil</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_ros_py</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>yolov8_msgs</exec_depend>
  <exec_depend>oakd_msgs</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>message_filters</exec_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
